--- a/app/index.html
+++ b/app/index.html
@@ -36,10 +36,15 @@
                       ng-click="$parent.showDetails = showCategory($parent.showDetails, 'details', step)"
                       tooltip="Tell me more!"></button>
 
+              <button class="icon icon-questions"
+                      ng-if="!tutorial.baseline && checkForCategory(step, 'questions')"
+                      ng-click="$parent.showQuestions = showCategory($parent.showQuestions, 'questions', step)"
+                      tooltip="Questions"></button>
+
               <button class="icon icon-other"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'other')"
                       ng-click="$parent.showOther = showCategory($parent.showOther, 'other', step)"
-                      tooltip="Questions & other notes"></button>
+                      tooltip="Other notes"></button>
             </div><!--
 
             --><div class="grid__item six-eighths">
@@ -50,6 +55,7 @@
               <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" ng-show="showCorrections" note="note" add-reply="addingReply"></note>
               <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'methods'" ng-show="showMethods" note="note" add-reply="addingReply"></note>
               <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'details'" ng-show="showDetails" note="note" add-reply="addingReply"></note>
+              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'questions'" ng-show="showQuestions" note="note" add-reply="addingReply"></note>
               <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'other'" ng-show="showOther" note="note" add-reply="addingReply"></note>
             </div><!--
 
@@ -89,6 +95,7 @@
             <button ng-click="typeSelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputType == 'corrections'}" tooltip="Corrections"></button>
             <button ng-click="typeSelected('methods')" class="icon icon-methods" ng-class="{'selected selected-methods': inputType == 'methods'}" tooltip="What is this?"></button>
             <button ng-click="typeSelected('details')" class="icon icon-details" ng-class="{'selected selected-details': inputType == 'details'}" tooltip="Tell me more!"></button>
+            <button ng-click="typeSelected('questions')" class="icon icon-questions" ng-class="{'selected selected-questions': inputType == 'questions'}" tooltip="Questions"></button>
             <button ng-click="typeSelected('other')" class="icon icon-other" ng-class="{'selected selected-other': inputType == 'other'}" tooltip="Other notes"></button>
           </div>
           <div ng-show="showTextarea">
@@ -96,6 +103,7 @@
               <div ng-if="inputType == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
               <div ng-if="inputType == 'methods'">Information specific to software. Point out useful tools or other ways of doing the tutorial.</div>
               <div ng-if="inputType == 'details'">Useful information that may help others understand and learn from the tutorial.</div>
+              <div ng-if="inputType == 'questions'">Need help with the tutorial? Ask a question for others to answer.</div>
               <div ng-if="inputType == 'other'">Have a note that doesn't fit in the other categories? Use this one!</div>
             </div>
             <div class="software-container" ng-if="(inputType == 'methods' || inputType == 'other') && !tutorial.baseline">
