--- a/app/index.html
+++ b/app/index.html
@@ -69,15 +69,7 @@
         --><div class="baseline-container grid__item three-tenths" ng-style="{height: windowHeight + 'px'}" ng-if="tutorial.baseline">
             <div ng-if="tutorial.notes">
               <h2>Comments</h2>
-              <!--<div class="baseline-content note" ng-repeat="comment in tutorial.notes | orderBy:'id':false">
-                <div>{{comment.content}}</div>
-                <div class="comment-footer">
-                  <button class="plain-button reply-button" ng-click="addingReply($index, $event, comment.id, comment.author)">Reply</button>
-                  <div class="note-author">Submitted by {{comment.author}}</div>
-                </div>
-              </div>-->
-
-              <note ng-repeat="note in tutorial.notes" note="note" add-reply="addingReply" baseline="true"></note>
+              <note ng-repeat="note in tutorial.notes" ng-if="!note.reply_to" note="note" add-reply="addingReply" baseline="true"></note>
             </div>
             <div class="submit-comment-container">
               <h2>Submit a comment</h2>
