--- a/app/index.html
+++ b/app/index.html
@@ -40,47 +40,48 @@
                  </div>
             </div>
            </div>
+
           <div class="l-block grid grid--full"
                ng-repeat="step in listOfSteps"
                ng-mouseenter="hover = true"
                ng-mouseleave="hover = false"
                ng-if="step.step_number!== listOfSteps.length"
-               ng-class="{'selected-step': selectedLine === $index || selectedStepsList.indexOf(step)!=-1}">
+               ng-class="{'selected-step':selectedStepsList.indexOf(step)!=-1}">
 
             <!-- Buttons to toggle on/off notes -->
               <div class="grid__item one-eighth is-right-aligned">
 
               <button class="icon icon-corrections"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'corrections')"
-                      ng-click="$parent.showCorrections = showCategory($parent.showCorrections, 'corrections', step)"
+                      ng-click="noteOrder(step);$parent.showCorrections = showCategory($parent.showCorrections, 'corrections', step)"
                       tooltip="Corrections">
                       <div class = "icon__number">{{numberOfNotes(step,"corrections")}}</div>
               </button>
 
               <button class="icon icon-methods"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'methods')"
-                      ng-click="$parent.showMethods = showCategory($parent.showMethods, 'methods', step)"
+                      ng-click="noteOrder(step);$parent.showMethods = showCategory($parent.showMethods, 'methods', step)"
                       tooltip="What is this?">
                       <div class="icon__number">{{numberOfNotes(step,"methods")}}</div>
               </button>
 
               <button class="icon icon-details"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'details')"
-                      ng-click="$parent.showDetails = showCategory($parent.showDetails, 'details', step)"
+                      ng-click="noteOrder(step);$parent.showDetails = showCategory($parent.showDetails, 'details', step)"
                       tooltip="Tell me more!">
                       <div class="icon__number">{{numberOfNotes(step,"details")}}</div>
               </button>
 
               <button class="icon icon-questions"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'questions')"
-                      ng-click="$parent.showQuestions = showCategory($parent.showQuestions, 'questions', step)"
+                      ng-click="noteOrder(step);$parent.showQuestions = showCategory($parent.showQuestions, 'questions', step)"
                       tooltip="Questions">
                       <div class="icon__number">{{numberOfNotes(step,"questions")}}</div>
               </button>
 
               <button class="icon icon-other"
                       ng-if="!tutorial.baseline && checkForCategory(step, 'other')"
-                      ng-click="$parent.showOther = showCategory($parent.showOther, 'other', step)"
+                      ng-click="noteOrder(step);$parent.showOther = showCategory($parent.showOther, 'other', step)"
                       tooltip="Other notes">
                       <div class="icon__number">{{numberOfNotes(step,"other")}}</div>
               </button>
@@ -88,18 +89,18 @@
             </div><!--
 
             --><div class="grid__item six-eighths">
-                <div ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">
-                <h2 id="{{step.id}}">Step {{step.step_number}}</h2>
+                <div id="{{step.id}}">
+                    <h2 ng-if="!(step.step_number==0) && (step.step_number<(tutorial.steps.length-2))">Step {{step.step_number}}</h2>
                 </div>
                 <div id="{{tutorial.steps[tutorial.steps.length-2].id}}" ng-if="(step.step_number==(tutorial.steps.length-2))"></div>
               <div class="main-content" ng-bind-html="step.html"></div>
 
               <!-- Step's notes, if toggled on -->
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" ng-show="showCorrections" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'methods'" ng-show="showMethods" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'details'" ng-show="showDetails" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'questions'" ng-show="showQuestions" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
-              <note ng-repeat="note in step.notes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'other'" ng-show="showOther" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              <note ng-repeat="note in listOfStepNotes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'corrections'" ng-show="showCorrections" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              <note ng-repeat="note in listOfStepNotes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'methods'" ng-show="showMethods" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              <note ng-repeat="note in listOfStepNotes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'details'" ng-show="showDetails" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              <note ng-repeat="note in listOfStepNotes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'questions'" ng-show="showQuestions" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
+              <note ng-repeat="note in listOfStepNotes" ng-if="!tutorial.baseline && canShowNote(note) && note.category === 'other'" ng-show="showOther" note="note" delete-it="deleteNote" rate-it="newRating" add-reply="addingReply" can-show-note="canShowNote" baseline="false"></note>
             </div><!--
 
             --><div class="grid__item one-eighth input-start-container" ng-if="!tutorial.baseline" ng-show="hover && selectedLine != $index">
@@ -124,26 +125,26 @@
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
           <script src="scripts/smooth-scrolling.js"></script>
 
-          <div ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
-          <div ng-if="!tutorial.baseline">
+          <div class ="window-title" ng-if="replyTo != null">Replying to {{$parent.replyToContributor}}.</div>
+          <div ng-if="!tutorial.baseline && replyTo==null">
             <div ng-if="!secondMenu">
                 <div class="window-title" >COMMENTING ON</div>
                 <button class="menu-button" ng-click="menuSwitch()">></button>
                 <div ng-repeat="step in currentStep">
-                <a class="close-button-first" ng-click="closeInput()" href="#{{step.id}}">Close</a>
+                <a class="close-button close-button-first" ng-click="closeInput()" href="#{{step.id}}">Close</a>
                 <a class="return-button" href="#{{step.id}}">Return</a>
                 </div>
                 <div class="selected-steps" ng-if="selectedStepsList.length == 0">None Selected</div>
                 <div class="selected-steps" ng-if="selectedStepsList.length !=0">STEPS: {{list.toString()}}</div>
                 <div>
-                      <button class="add-step-button">
+                      <button class="menu-action-button">
                           <a href="#whole">(e)</a>
                       </button>
-                      <button class="add-step-button" ng-click="stepSelected(listOfSteps[listOfSteps.length-1]);numberList()" ng-class="{'selected-add-button':selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1}">+</button>
+                      <button class="menu-action-button" ng-click="stepSelected(listOfSteps[listOfSteps.length-1]);numberList()" ng-class="{'selected-add-button':selectedStepsList.indexOf(listOfSteps[listOfSteps.length-1])!=-1}">+</button>
                       <div class="step-list">WHOLE TUTORIAL</div>
                       <div ng-repeat="step in listOfSteps">
-                        <a class="add-step-button" ng-if="step.step_number <listOfSteps.length-1" href="#{{step.id}}">(e)</a>
-                        <button class="add-step-button" ng-click="stepSelected(step);numberList()" ng-if="step.step_number <listOfSteps.length-1" ng-class="{'selected-add-button':selectedStepsList.indexOf(step)!=-1}">+</button>
+                        <a class="menu-action-button" ng-if="step.step_number <listOfSteps.length-1" href="#{{step.id}}">(e)</a>
+                        <button class="menu-action-button" ng-click="stepSelected(step);numberList()" ng-if="step.step_number <listOfSteps.length-1" ng-class="{'selected-menu-button':selectedStepsList.indexOf(step)!=-1}">+</button>
                         <div class="step-list" ng-if="step.step_number==0">INTRO</div>
                         <div class="step-list" ng-if="step.step_number==listOfSteps.length-2">END</div>
                         <div class="step-list" ng-if="step.step_number!=0 && step.step_number <listOfSteps.length-2">STEP {{step.step_number}}</div>
@@ -156,7 +157,7 @@
                 <div class="window-title" ng-if="secondMenu">CATEGORIES</div>
                 <button class="menu-button" ng-click="menuSwitch()"><</button>
                 <div ng-repeat="step in currentStep">
-                    <a class="close-button-second" ng-click="closeInput()" href="#{{step.id}}">Close</a>
+                    <a class="close-button close-button-second" ng-click="closeInput()" href="#{{step.id}}">Close</a>
                     <a class="return-button" href="#{{step.id}}">Return</a>
                 </div>
                 <button ng-click="categorySelected('corrections')" class="icon icon-corrections" ng-class="{'selected selected-corrections': inputCategory == 'corrections'}" tooltip="Corrections"></button>
@@ -168,7 +169,7 @@
             </div>
           </div>
 
-          <div ng-show="showTextarea">
+          <div ng-show="showTextarea || replyTo!==null">
             <div class="description"  ng-if="!tutorial.baseline">
               <div ng-if="inputCategory == 'corrections'">Found a mistake? Help us out by pointing it out!</div>
               <div ng-if="inputCategory == 'methods'">Information specific to software. Point out useful tools or other ways of doing the tutorial.</div>
@@ -181,8 +182,13 @@
               <div ng-if="inputCategory == 'other'">How would you label your note?</div>
               <input type="text" ng-model="$parent.$parent.extraInput" />
             </div>
-            <textarea class="input-text" ng-model="$parent.newNote" rows="4" placeholder="Please enter your note here."></textarea>
+            <div ng-if="replyTo!=null">
+                  <div class="close-button close-button-second" ng-click="closeInput()">Close</div>
+            </div>
+            <textarea class="input-text" ng-model="$parent.newNote" rows="6" placeholder="Please enter your note here."></textarea>
             <button ng-click="submitNote()" class="plain-button">Submit</button>
+          </div>
+
           </div>
         </div>
       </div>
